test/mpi/errors/Makefile.sm
#SUBDIRS = util attr basic datatype coll comm errhan group info init pt2pt rma spawn topo io @otherlangs@ @threadsdir@ errors .
SUBDIRS_otherlangs = cxx f77 f90
SUBDIRS = coll comm errhan pt2pt spawn @otherlangs@

testing:
	../runtests -srcdir=$(srcdir) -tests=testlist \
		   -mpiexec=@MPIEXEC@ \
		   -xmlfile=summary.xml
